Criação do arquivo style.css

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align-last: center;
-    background-color:#000080;
+    background-color:#dadada;
 }
 
 h1 {font-size: xxx-large;}
-h1 {color:#ffff00;}
+h1 {color:#761ac2;}
