--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
-    text-align-last: center;
-    background-color:#0a0a0a;
+    margin-top: 05%;
+    text-align-last:initial;
+    background-color:#F4FCF9;
+    margin-left: 05%;
+    margin-right: 05%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {font-size: xxx-large;}
-h1 {color:#e6ff02;}
+h1 {color:#913C33}
 
-p {color: rgb(255, 255, 255);}
+h2 {color: #E06F62}
+p {color: #06913B}
