--- a/style.css
+++ b/style.css
@@ -42,11 +42,32 @@ p {color: #06913B}
 
 .gustavo {
     padding-top: 02%;
+    display: inline-block;
+    width: 100%;
+    height:70%;
     padding-bottom: 02%;
     padding-left: 0%;
     padding-right: 0%;
 }
 
-.jogadoresM {
+.lista1 {
+    text-align: left;
+    font-size: 17px;
     color: #913;
+    display: inline-block;
+    width: 30%;
+    height:30%;
+    margin-left: 12%;
+    margin-right: 05%;
+}
+
+.lista2 {
+    text-align:left;
+    font-size: 17px;
+    color: #913;
+    display: inline-block;
+    width: 30%;
+    height:30%;
+    margin-left: 05%;
+    margin-right: 05%;
 }
